--- a/AmbientLightWeb/ambient_light_web/src/components/content/Content.css
+++ b/AmbientLightWeb/ambient_light_web/src/components/content/Content.css
@@ -128,7 +128,7 @@
   justify-content: center;
 
   column-gap: 20px;
-  margin-top: 10px;
+  margin: 10px auto;
 }
 
 .container_selecting {
@@ -137,10 +137,6 @@
   align-items: center;
 
   column-gap: 20px;
-}
-
-.container_after {
-  row-gap: 20px;
 }
 
 .selecting_checkboxes {
